# gyrocompass

./: .env.example  .gitignore  .vercelignore  DEMO.md  DEMO_MERIDIAN.md  GETTING_STARTED.md  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  vercel.json
.github/workflows/: gyrocompass-drift.yml
api/: main.py
api/routers/: analysis.py  drift.py  memory.py  projects.py  specs.py  webhooks.py
benchmark/: BENCHMARK.md  results.json  run_benchmark.py
benchmark/class_b_agent_study/: README.md  requirements.txt  run_study.py  tasks.yaml
examples/: .gyrorules.yaml  .gyrostate.yaml  add-to-your-repo.yml
gyrocompass/: __init__.py  attestation.py  config.py  docs.py  drift.py  enforce.py  gitutils.py  indexer.py  models.py  rules.py  specs.py
gyrocompass/audit/: __init__.py  engine.py  scanners.py
gyrocompass/cli/: main.py
gyrocompass/graph/: __init__.py  backend.py  builder.py  enrich.py  nl_query.py  semantic.py
gyrocompass/hooks/: claude_hooks.py  installer.py
gyrocompass/llm/: __init__.py  providers.py
gyrocompass/mcp/: __init__.py  server.py
gyrocompass/memory/: __init__.py  store.py
plugin/: server.json
plugin/claude/: CLAUDE.md
plugin/claude/skills/: analyze-before-coding.md  perform-review.md  prepare-for-commit.md
scripts/: demo_seed.sh  demo_seed_history.py  demo_vuln_app.sh
web/: next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/architecture/: page.tsx
web/app/drift/: page.tsx
web/app/rules/: page.tsx
web/app/settings/: page.tsx
web/components/: DriftScore.tsx  SeverityBadge.tsx  Sidebar.tsx  Topbar.tsx
