[project]
name = "gyrocompass"
version = "0.1.0"
description = "Open-source architecture visibility and guardrails for AI-native development teams"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["architecture", "ai-agents", "guardrails", "mcp", "drift-detection", "devtools"]

dependencies = [
    # Core
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.5",
    "loguru>=0.7.3",
    # Code parsing
    "tree-sitter==0.25.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-java>=0.23.5",
    # Graph
    "networkx>=3.3",
    # MCP
    "mcp>=1.21.1",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # LLM (optional deps in optional-dependencies below)
    "openai>=1.51.0",
    # GitHub
    "PyGithub>=2.3.0",
    # Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Git
    "gitpython>=3.1.43",
    # Utils
    "watchdog>=6.0.0",
    "click>=8.0.0",
    "toml>=0.10.2",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
ollama = []  # Ollama uses openai-compatible API, already covered by openai dep
postgres = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.9"]
# Deep code-graph engine (Phase 2): Memgraph client + the code-graph-rag engine
# (MIT, by vitali87 — published on PyPI as `code-graph-rag`, import pkg
# `codebase_rag`). With this extra, `pip install gyrocompass[graph]` is fully
# self-contained — no vendored checkout required. The builder still falls back
# to a vendored checkout if `codebase_rag` isn't installed, so the monorepo dev
# setup keeps working too.
graph = ["pymgclient>=1.4.0", "code-graph-rag>=0.0.38"]
# Semantic code search: Qdrant vector store + UniXcoder embeddings (heavy).
semantic = ["qdrant-client>=1.9.0", "torch>=2.6.0", "transformers>=4.0.0"]
all = ["gyrocompass[anthropic,postgres,graph,semantic]"]

[project.scripts]
gyro = "gyrocompass.cli.main:app"
gyrocompass = "gyrocompass.cli.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship only the importable `gyrocompass` package in the wheel. The api/ and web/
# trees are the self-host server + dashboard (delivered via the repo / Docker),
# not part of the pip-installable CLI + MCP package.
[tool.hatch.build.targets.wheel]
packages = ["gyrocompass"]

[tool.hatch.build.targets.sdist]
include = [
    "gyrocompass/",
    "examples/",
    "plugin/",
    "README.md",
    "INSTALL.md",
    "GETTING_STARTED.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "UP007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
